--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -237,7 +237,7 @@ a#prev_page_button:hover{
             </div>
     </nav>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="mt-4 mb-3 row justify-content-center" id="myDiv">
             <div class="col-7 border p-3 pink">
                 <div class="mb-3">
@@ -247,7 +247,7 @@ a#prev_page_button:hover{
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- <div class="modal fade" id="showpost" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -278,9 +278,25 @@ a#prev_page_button:hover{
                 </div>
 
                 <div>
-                    <h1>TITLE HERE</h1>
-                    <p>DESCRTIPION</p>
-               
+                    <h1>Your Diary I will Keep</h1>
+                    <p>Love, Shrek</p>
+                </div>
+
+                <div class="container">
+                    <div class="mt-4 mb-3 row justify-content-center" id="myDiv">
+                        <div class="col-7 border p-3 pink">
+                            <div class="mb-3">
+                                <div class="card-body pink">
+                                    <div align="center"><h3>Welcome to Journaling !</h3></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h1>Please click the journals tab!</h1>
+                    <p>Love, Shrek</p>
                 </div>
           
             </div>
